--- a/mindsky.html
+++ b/mindsky.html
@@ -30,8 +30,40 @@
   <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
   <meta name="revisit-after" content="3 days">
 
+  <meta property="og:url" content="" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Thoughts: Peak Shift Ltd." />
+  <meta property="og:image" content="" />
+  <meta property="og:site_name" content="Peak Shift Ltd." />
+  <meta property="og:description" content="" />
+
+  <meta name="twitter:card" content="photo" />
+  <meta name="twitter:site" content="@peakshift" />
+  <meta name="twitter:title" content="Thoughts: Peak Shift Ltd.">
+  <meta name="twitter:image" content="">
+  <meta name="twitter:image:width" content="1200" />
+  <meta name="twitter:image:height" content="630" />
+
   <!-- The Styles -->
   <link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6502879-7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-6502879-7');
+  </script>
+  <!-- End Google Analytics -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TPS5PB');</script>
+  <!-- End Google Tag Manager -->
 
 </head>
 <body class="">
@@ -40,7 +72,7 @@
   <aside id="mainSide" class="column">
     <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks" style="color: #FFF;margin: 1em 0 0;">We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a>
+      <h2 id="portfolioLinks">We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a>
         &amp; blockchain.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
@@ -72,7 +104,7 @@
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
             <a href="//dribbble.com/jb">
-              <img src="/assets/icons/dribbble.svg" width="16" height="14" style="padding:2px 1 0;">
+              <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
         </div>
@@ -146,5 +178,9 @@
   <script src="/assets/js/history.js"></script>
   <script src="/assets/js/router.js"></script>
   <script src="/assets/js/scripts.js?v0001"></script>
+  <!-- Google Tag Manager -->
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+  height="0" width="0" style="display:none; visibility:hidden; "></iframe></noscript>
+  <!-- End Google Tag Manager -->
 </body>
 </html>
