--- a/mindsky.html
+++ b/mindsky.html
@@ -116,28 +116,38 @@
   </aside>
 
   <section id="mainContent" class="column">
-    <figure class="active" style="background-image:url('/assets/content/mindsky-bg.png');">
+    <figure class="active" style="background-image:url('/assets/content/mindsky-bg.png'); background-color: #F6F6F6;">
       <div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">MindSky</h3>
       <div class="projectDetails column">
-        <p>What do they do: MindSky is an online platform connecting current university students and graduates in Rwanda
-          with employment opportunities.</p>
+        <p>MindSky is an online marketplace for connecting current university students and graduates in Rwanda with employment opportunities.</p>
 
-        <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for
-          openings directly on the platform using our professionally-formatted online profile builder as their
-          application document. Hiring managers log in, view, and sort applications as they come in.</p>
+        <h4>Hire with MindSky</h4>
+        <p>Employers post their internships and job opportunities on the MindSky job board.</p>
+        <figure style="background-color: #FCFCFC;" class="media--stretched active">
+          <div class="padded">
+          </div>
+        </figure>
 
-        <p>We currently work exclusively with Akilah Institute, a tertiary institute in Kigali that graduates many of
-          Rwanda’s most talented and high-achieving young women. Additional Rwandan schools and universities will be
-          joining soon, and we will launch throughout East Africa in the near future.</p>
+        <h4>Job Board &amp; Identity Platform</h4>
+        <p>MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document.</p>
+        <figure style="background-color: #FCFCFC;" class="media--stretched active">
+          <div class="padded">
+          </div>
+        </figure>
+
+        <h4>Back Office</h4>
+        <p>Hiring managers log in, view, and sort applications as they come in.</p>
+        <figure style="background-color: #FCFCFC;" class="media--stretched active">
+          <div class="padded">
+            <img class="fill" src="/assets/content/mindsky/backoffice.png?v=03">
+          </div>
+        </figure>
+
 
         <div class="column">
-          <h4>The Problem</h4>
-
-          <h4>The Solution</h4>
-
           <h4>Technologies Used</h4>
           <ul>
             <li>AWS Lambdas</li>
