chore(SEO): update social media meta tags (#21)

--- a/about.html
+++ b/about.html
@@ -20,19 +20,19 @@
 <!-- META: seo -->
 
 <title>Blockchain Product Design &amp; Development Studio</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
+<meta name="description" content="We craft digital products built on web, mobile and blockchain.">
+<meta name="keywords" content="web, mobile, development, design, blockchain, marketing">
 <meta name="author" content="Peak Shift Inc.">
 <meta name="company" content="Peak Shift">
 <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
 <meta name="revisit-after" content="3 days">
 
-<meta property="og:url" content="" />
+<meta property="og:url" content="http://peakshift.com" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Blockchain Product Design &amp; Development Studio" />
 <meta property="og:image" content="" />
 <meta property="og:site_name" content="Peak Shift Ltd." />
-<meta property="og:description" content="" />
+<meta property="og:description" content="We craft digital products built on web, mobile and blockchain." />
 
 <meta name="twitter:card" content="photo" />
 <meta name="twitter:site" content="@peakshift" />
