chore(*): test list view for projects [#29]

--- a/index.html
+++ b/index.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
+<!--[if lt IE 7 ]>
+<html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>
+<html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>
+<html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>
+<html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!-->
+<html lang="en" class="no-js"><!--<![endif]-->
 <head>
-<meta charset="utf-8">
+  <meta charset="utf-8">
 
-<!--[if IE]><![endif]-->
+  <!--[if IE]><![endif]-->
 
-<meta http-equiv="Expires" CONTENT="Tue, 01 Jan 2013 00:00:01 GMT">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-<meta http-equiv="imagetoolbar" content="no">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Expires" CONTENT="Tue, 01 Jan 2013 00:00:01 GMT">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta http-equiv="imagetoolbar" content="no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
-<!-- META: seo -->
+  <!-- META: seo -->
 
-<title>Peak Shift Ltd.</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="Peak Shift Inc.">
-<meta name="company" content="Peak Shift">
-<meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
-<meta name="revisit-after" content="3 days">
+  <title>Peak Shift Ltd.</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="Peak Shift Inc.">
+  <meta name="company" content="Peak Shift">
+  <meta name="copyright" content="Copyright (c) 2012 Peak Shift Inc.">
+  <meta name="revisit-after" content="3 days">
 
-<!-- The Styles -->
-<link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
+  <meta property="og:url" content="" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Thoughts: Peak Shift Ltd." />
+  <meta property="og:image" content="" />
+  <meta property="og:site_name" content="Peak Shift Ltd." />
+  <meta property="og:description" content="" />
+
+  <meta name="twitter:card" content="photo" />
+  <meta name="twitter:site" content="@peakshift" />
+  <meta name="twitter:title" content="Thoughts: Peak Shift Ltd.">
+  <meta name="twitter:image" content="">
+  <meta name="twitter:image:width" content="1200" />
+  <meta name="twitter:image:height" content="630" />
+
+  <!-- The Styles -->
+  <link href="assets/css/master.css?v=0004" rel="stylesheet" type="text/css">
 
 </head>
 <body class="">
 
 <div id="wrapper">
   <aside id="mainSide" class="column">
-    <div class="padded">  
+    <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; blockchain.</h2>
+      <h2 id="portfolioLinks">
+        We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; <a href="/zed">blockchain</a>.
+        <br><br>Learn more <a href="/about">about us</a>.
+      </h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -55,7 +77,8 @@
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">›</span> PHONE: <a href="tel:+442032872811">+442032872811</a></li>
             <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
+            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a>
+            </li>
           </ul>
           <p class="typeface-colour-secondary rs small">
             <a href="//twitter.com/peakshift">
@@ -69,55 +92,34 @@
             </a>
           </p>
         </div>
-        <p class="typeface-colour-secondary rs small"><small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small></p>
+        <p class="typeface-colour-secondary rs small">
+          <small><em>All Rights Reserved. Copyright &copy; Peak Shift Ltd. 2018</em></small>
+        </p>
       </div>
     </div>
   </aside>
-  
+
   <section id="mainContent" class="column">
-    <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="media--header active">
-      <div class="padded">
-        <img class="fill" src="/assets/content/mindsky-top.png?v=03">
-      </div>
+    <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
+      <a href="/lemariku"><div class="padded"><img class="fill" src="/assets/content/lemariku/header-details.png?v=1"></div></a>
     </figure>
-    <div class="contentArea padded clearfix">
-      <h3 class="projectTitle">MindSky</h3>
-      <div class="projectDetails column">
-        <p>MindSky is an online platform connecting current university students and graduates in Rwanda with employment opportunities.</p>
-
-        <p>Employers post their internships and job opportunities on the MindSky job board. MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document. Hiring managers log in, view, and sort applications as they come in.</p>
-
-        <figure style="background-image:url('/assets/content/mindsky-bg.png');" class="media--stretched active">
-          <div class="padded">
-            <img class="fill" src="/assets/content/mindsky-top.png?v=03">
-          </div>
-        </figure>
-
-        <h4>Technologies Used</h4>
-        <ul>
-          <li>AWS Lambdas</li>
-          <li>AWS EC2</li>
-          <li>Docker</li>
-          <li>Terraform</li>
-          <li>Node.js</li>
-          <li>Vue.js</li>
-          <li>Vuex</li>
-          <li>GraphQL</li>
-          <li>MySQL</li>
-          <li>MongoDB</li>
-        </ul>
-      </div>        
-      <ul class="projectMeta column">
-        <li><a href="https://www.mindsky.com/" target="_blank">Launch Project &rarr;</a></li>
-        <li>AkilahNet LLC.</li>
-        <li>2016 - 2018</li>
-      </ul>
-    </div>
+    <figure class="active" style="background-image:url('/assets/content/mindsky/header-bg-light.png'); background-color: #F6F6F6;">
+      <a href="/mindsky"><div class="padded"><img class="fill" src="/assets/content/mindsky/header-details.png?v=03"></div></a>
+    </figure>
   </section>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="/assets/js/history.js"></script>
-<script src="/assets/js/router.js"></script>
-<script src="/assets/js/scripts.js?v0001"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="/assets/js/history.js"></script>
+  <script src="/assets/js/router.js"></script>
+  <script src="/assets/js/scripts.js?v0001"></script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TPS5PB');</script>
+  <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TPS5PB"
+  height="0" width="0" style="display:none; visibility:hidden; "></iframe></noscript>
+  <!-- End Google Tag Manager -->
 </body>
 </html>
