--- a/lemariku.html
+++ b/lemariku.html
@@ -71,7 +71,10 @@
   <aside id="mainSide" class="column">
     <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; blockchain.</h2>
+      <h2 id="portfolioLinks">
+        We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; blockchain.
+        <br><br>Learn more <a href="/about">about us</a>.
+      </h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -115,14 +118,18 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
+      <a href="/lemariku"><div class="padded"><img class="fill" src="/assets/content/lemariku/header-details.png?v=1"></div></a>
     </figure>
     <div class="contentArea padded clearfix">
-      <h3 class="projectTitle">Lemariku</h3>
+      <h3 class="projectTitle articleTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
       <div class="projectDetails column">
         <p>What do they do: Lemariku is an online platform that makes shopping of second-hand fashion easy and comfortable for Indonesians.</p>
 
         <p>People can list items they want to sell on the platform, which is an online marketplace connecting buyers and sellers, allowing them to chat to each other and slect the ideal payment and delivery method for both parties.</p>
+
+        <figure class="active media--stretched" style="background-color: #FEF7F9">
+          <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
+        </figure>
 
         <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
 
