--- a/mindsky.html
+++ b/mindsky.html
@@ -72,8 +72,10 @@
   <aside id="mainSide" class="column">
     <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a>
-        &amp; blockchain.</h2>
+      <h2 id="portfolioLinks">
+        We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; blockchain.
+        <br><br>Learn more <a href="/about">about us</a>.
+      </h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -116,30 +118,31 @@
   </aside>
 
   <section id="mainContent" class="column">
-    <figure class="active" style="background-image:url('/assets/content/mindsky-bg.png'); background-color: #F6F6F6;">
-      <div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div>
+    <figure class="active" style="background-image:url('/assets/content/mindsky/header-bg-light.png'); background-color: #F6F6F6;">
+      <a href="/mindsky"><div class="padded"><img class="fill" src="/assets/content/mindsky/header-details-full.png?v=03"></div></a>
     </figure>
     <div class="contentArea padded clearfix">
-      <h3 class="projectTitle">MindSky</h3>
+      <h3 class="projectTitle articleTitle">Building an Employment Platform for East Africa</h3>
       <div class="projectDetails column">
         <p>MindSky is an online marketplace for connecting current university students and graduates in Rwanda with employment opportunities.</p>
+        <p>We worked closly with AkilahNet and Akilah Institute to develop this platform.</p>
 
-        <h4>Hire with MindSky</h4>
-        <p>Employers post their internships and job opportunities on the MindSky job board.</p>
-        <figure style="background-color: #FCFCFC;" class="media--stretched active">
-          <div class="padded">
-          </div>
-        </figure>
-
-        <h4>Job Board &amp; Identity Platform</h4>
+        <h4>1. Job Board &amp; Identity Platform</h4>
         <p>MindSky members apply for openings directly on the platform using our professionally-formatted online profile builder as their application document.</p>
         <figure style="background-color: #FCFCFC;" class="media--stretched active">
           <div class="padded">
           </div>
         </figure>
 
-        <h4>Back Office</h4>
-        <p>Hiring managers log in, view, and sort applications as they come in.</p>
+        <h4>2. Hire with MindSky</h4>
+        <p>Employers post their internships and job opportunities on the MindSky job board.</p>
+        <figure style="background-color: #FCFCFC;" class="media--stretched active">
+          <div class="padded">
+          </div>
+        </figure>
+
+        <h4>3. Back Office</h4>
+        <p>Hiring managers log in, view, and sort applications as they come in then pass them onto employers.</p>
         <figure style="background-color: #FCFCFC;" class="media--stretched active">
           <div class="padded">
             <img class="fill" src="/assets/content/mindsky/backoffice.png?v=03">
@@ -166,19 +169,20 @@
           <blockquote>
             <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal
               type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
+            <cite>Nugent, Pam M.S.</cite>
           </blockquote>
 
           <blockquote>
             <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal
               type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
+            <cite>Nugent, Pam M.S.</cite>
           </blockquote>
         </div>
       </div>
       <ul class="projectMeta column">
         <li><a href="https://www.mindsky.com/" target="_blank">Launch Project &rarr;</a></li>
         <li>AkilahNet LLC.</li>
+        <li>New York &amp; Rwanda</li>
         <li>2016 - 2018</li>
       </ul>
     </div>
