chore(dribble): update profile link. Close #20

--- a/mindsky.html
+++ b/mindsky.html
@@ -103,7 +103,7 @@
             <a href="//facebook.com/peakshift">
               <img src="/assets/icons/facebook.svg" width="16" height="16">
             </a>
-            <a href="//dribbble.com/jb">
+            <a href="//dribbble.com/peakshift">
               <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
             </a>
           </p>
