--- a/journal.html
+++ b/journal.html
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <a href="//facebook.com/peakshift">
                     <img src="/assets/icons/facebook.svg" width="16" height="16">
                   </a>
-                  <a href="//dribbble.com/jb">
+                  <a href="//dribbble.com/peakshift">
                     <img class="dribble" src="/assets/icons/dribbble.svg" width="16" height="14">
                   </a>
                </p>
