style(templates): properly indent code and add shorthand property to background image

--- a/lemariku.html
+++ b/lemariku.html
@@ -115,7 +115,9 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
+      <div class="padded">
+        <img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1">
+      </div>
     </figure>
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Lemariku</h3>
