--- a/mindsky.html
+++ b/mindsky.html
@@ -116,7 +116,7 @@
   </aside>
 
   <section id="mainContent" class="column">
-    <figure class="active" style="background-image:url('/assets/content/mindsky-bg.png'); background-color: #F6F6F6;">
+    <figure class="active" style="background: #F6F6F6 url('/assets/content/mindsky-bg.png');">
       <div class="padded"><img class="fill" src="/assets/content/mindsky-top.png?v=03"></div>
     </figure>
     <div class="contentArea padded clearfix">
