--- a/lemariku.html
+++ b/lemariku.html
@@ -118,20 +118,29 @@
 
   <section id="mainContent" class="column">
     <figure class="active" style="background-image:url('/assets/content/lemariku/lemariku-bg-2.png');">
-      <a href="/lemariku"><div class="padded"><img class="fill" src="/assets/content/lemariku/header-details.png?v=1"></div></a>
+      <a href="/lemariku"><div class="padded"><img class="fill" src="/assets/content/lemariku/header-details-2.png?v=1"></div></a>
     </figure>
     <div class="contentArea padded clearfix">
-      <h3 class="projectTitle articleTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
+      <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
       <div class="projectDetails column">
         <p>What do they do: Lemariku is an online platform that makes shopping of second-hand fashion easy and comfortable for Indonesians.</p>
 
         <p>People can list items they want to sell on the platform, which is an online marketplace connecting buyers and sellers, allowing them to chat to each other and slect the ideal payment and delivery method for both parties.</p>
 
+
+        <h4>Strategy &amp; Roadmap</h4>
+        <figure class="active media--stretched" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
+        </figure>
+
+        <h4>Branding</h4>
+        <figure class="active media--stretched" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
+        </figure>
+
+        <h4>User Interface &amp; Expereince</h4>
+        <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
         <figure class="active media--stretched" style="background-color: #FEF7F9">
           <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
         </figure>
-
-        <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
 
         <div class="column">
           <h4>The Problem</h4>
