refactor(lemariku): restructure content

--- a/lemariku.html
+++ b/lemariku.html
@@ -123,61 +123,55 @@
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
       <div class="projectDetails column">
-        <p>What do they do: Lemariku is an online platform that makes shopping of second-hand fashion easy and comfortable for Indonesians.</p>
+        <p>We are passionate to help founders develop their ideas into a product from the ground up.</p>
 
-        <p>People can list items they want to sell on the platform, which is an online marketplace connecting buyers and sellers, allowing them to chat to each other and slect the ideal payment and delivery method for both parties.</p>
+        <p>The Lemariku founders came to us with an idea to create an online marketplace that allows people in Indonesia to sell second hand fashion items.</p>
 
+        <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
+
+        <p>In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate Lemariku from the competition. Additional to that was to designing and developing an interface that is intuitive to use for the Indonesian target audience, who find websites too complicated, and don't trust online payments.
 
         <h4>Strategy &amp; Roadmap</h4>
+        <p>Our collaboration with Lemariku started from the inception of the idea, and when they had only a hypothesis and rough idea for the application.</p>
+
+        <p>Working together, we came up with the following definition.</p>
+
+        <blockquote>
+          <p>Lemariku is an online marketplace connecting buyers and sellers, allowing them to chat to each other, negotiate prices, and select their ideal payment and delivery method for both parties.</p>
+        </blockquote>
+
+        <p>We worked closely with the founders to set objectives which helped us plan a product development roadmap for which we then broke down into a serise of agile sprints.</p>
+
         <figure class="active media--stretched" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
         </figure>
 
         <h4>Branding</h4>
-        <figure class="active media--stretched" style="background-image: url(/assets/content/lemariku/roadmap.svg); height: 300px;">
+        <p>The brand was specifically catered to the Indonesian market. The brand name Lemariku means “my closet”, which comes from ‘lemari’ meaning ‘closet’ and ‘ku’ meaning ‘my’ in Indonesian. 
+
+        <p>The logo was created to clearly visualise that it is a fashion application and add to the meaning of the name.</p>
+        <figure class="active media--stretched" style="background-color: #FEF7F9; height: 520px;">
         </figure>
 
         <h4>User Interface &amp; Expereince</h4>
-        <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
+
+        <p>Sellers mainly used Instagram to reach potential buyers to advertise their fashion items so we wanted to create an experience that was familliar, with while providing tools to address the challenges they had with current soltuions</p>
+
+        <p>In order to encourage sellers to share their profiles, we wanted to provide some personalistion options so we allowed them to choose a colour from a pallete that would distinguish their profiles and items in search results.</p>
         <figure class="active media--stretched" style="background-color: #FEF7F9">
           <div class="padded"><img class="fill" src="/assets/content/lemariku/lemariku-top.png?v=1"></div>
         </figure>
 
-        <div class="column">
-          <h4>The Problem</h4>
-          <p> Lemariku aims to make online shopping more accessible to Indonesians who:</p>
-          <ul>
-            <li>find websites too complicated;</li>
-            <li>find shipping costs too high;</li>
-            <li>don’t trust online payments;</li>
-            <li>want to talk to the seller before making a purchase.</li>
-          </ul>
-          <p> In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate it from the competition. The real challenge came in designing and developing a website that is intuitive to use for the Indonesian target audience, who find websites too complicated, while building all of the functionality Lemariku wanted to offer.</p>
-
-          <h4>The Solution</h4>
-
-          <h4>Technologies Used</h4>
-          <ul>
-            <li>MySQL + Knex</li>
-            <li>Node.js</li>
-            <li>Backbone.js + Marionette</li>
-            <li> Socket.io</li>
-          </ul>   
-
-          <h4>Testimonials</h4>
-          <blockquote>
-            <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
-          </blockquote>
-
-          <blockquote>
-            <p>The phenomenon postulating that an extreme type of a favored stimulant is desired more than the normal type of said stimulant</p>
-            <cite>&mdash; Nugent, Pam M.S.</cite>
-          </blockquote>
-        </div>
+        <h4>Technology Stack</h4>
+        <ul>
+          <li>Node.js</li>
+          <li>Web Sockets</li>
+          <li>Phone Gap (iOS and Android)</li>
+          <li>Backbone.js + Marionette</li>
+        </ul>   
       </div>        
       <ul class="projectMeta column">
-        <li><a href="" target="_blank">Launch Project &rarr;</a></li>
         <li>Lemariku</li>
+        <li>Jakarta, Indonesia</li>
         <li>2015 - 2016</li>
       </ul>
     </div>
