refactor(*): change order of pages

--- a/about.html
+++ b/about.html
@@ -70,10 +70,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <aside id="mainSide" class="column">
     <div class="padded">  
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-      <h2 id="portfolioLinks">
-        We craft digital products built on <a href="/mindsky">web</a>, <a href="/lemariku">mobile</a> &amp; <a href="/zed">blockchain</a>.
-        <br><br>Learn more <a href="/about">about us</a>.
-      </h2>
+      <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; blockchain &mdash; <a href="/about">Meet The Team</a>.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
@@ -155,10 +152,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </ul>
         </div> 
       </div>        
-      <ul class="projectMeta column">
-        <li><a href="/journal" target="_blank"> Read Our Minds &rarr;</a></li>
-        <li>Peak Shift Ltd.</li>
-      </ul>
     </div>
     <figure class="active padded">
       <h1> Meet the team </h1>
