--- a/index.html
+++ b/index.html
@@ -120,13 +120,9 @@
     <div class="contentArea padded clearfix">
       <h3 class="projectTitle">Branding &amp; UI for a pre-loved fashion marketplace</h3>
       <div class="projectDetails column">
-        <p>We are passionate to help founders develop their ideas into a product from the ground up.</p>
-
         <p>The Lemariku founders came to us with an idea to create an online marketplace that allows people in Indonesia to sell second hand fashion items.</p>
 
-        <p>The platform is specifically created and catered to the purchase behaviour to the indonesian consumer allowing for cash payments and utilising local delivery services like GO-Jek.</p>
-
-        <p>In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate Lemariku from the competition. Additional to that was to designing and developing an interface that is intuitive to use for the Indonesian target audience, who find websites too complicated, and don't trust online payments.
+        <p>In a saturated market, it was our first challenge to clearly communicated the OVP and differentiate Lemariku from the competition. We had to create a platform that is catered to the specific behaviours of the Indonesian target audience, such as allowing for cash payments and utilising local delivery services like GO-Jek. Additional to that was to design and develop an interface that is intuitive to use for them, as they find websites too complicated, and don't trust online payments.</p>
 
         <h4>Strategy &amp; Roadmap</h4>
         <p>Our collaboration with Lemariku started from the inception of the idea, and when they had only a hypothesis and rough idea for the application.</p>
